@@ -22,6 +22,7 @@ Regression Impact:
 * PrettyException no longer extends javax.faces.FacesException
 * Began deprecation of <view-id>/view.jsp</view-id> in favor of <view-id value="/view.jsp" />
 * com.ocpsoft.pretty.faces.el.BeanNameResolver SPI has moved to com.ocpsoft.pretty.faces.spi.ELBeanNameResolver
+* URL-mapping order is now properly respected in pretty-config.xml (and other config sources.)
 
 Bugfixes:
 * Fixed compatibility with Java 1.5
@@ -31,6 +32,7 @@ Bugfixes:
 * Fixed FacesConfigBeanNameResolver regarding space characters in URLs 
 * PrettyFacesWrappedResponse no longer depends on FacesContext (#78)
 * PrettyFaces no longer injects values into EL if the response has been marked complete (#79)
+* Added documentation specifying the need to "double-escape" backslashes in custom regexes (#83)
 
 
 ------------------------------------
